# GerNetiX

./: .codex  .dockerignore  .env.public-demo.vps.example  .env.staging.example  .env.vps.example  .gitignore  AGENTS.md  GerNetiX.code-workspace  README.md  compose.flashbox-build-test.yaml  compose.public-demo.vps.yaml  compose.vps.yaml
Demoanwendungen/: README.md
Projektideen/: actuator-output-basics.step-tool-preview.yaml  actuator-output-basics.yaml  climate-box-control.yaml  connected-tamagotchi.yaml  esp32-ota-bootstrap-firmware.yaml  esp32-provisioning-tool.yaml  plant-watering-control.yaml  reusable-learning-chapters.yaml  smartbox-rfid-access-control.yaml  temperature-data-logger.yaml
basissoftware/esp32/src/: CMakeLists.txt  main.cpp
basissoftware/esp32/src/functions/: factory_provisioning.cpp  feedback.cpp  handleNetwork.cpp  initPins.cpp  initSerial.cpp  initWifi.cpp  mqtt_ota.cpp  ota_update.cpp  project_dashboard.cpp  provisioning_config.cpp  publishStatus.cpp  readSensors.cpp  runDiagnostics.cpp  serial_provisioning.cpp  startCaptiveDnsServer.cpp  startDeviceWebServer.cpp  startRuntimeTasks.cpp  updateActuators.cpp
basissoftware/esp32/src/hooks/: onProjectInit.cpp  onProjectTick.cpp
basissoftware/esp32/src/user/: hw_pwm_config.example.h  user_app.cpp  user_app.h  wifi_config.example.h
docker/: flashbox-build-server.Dockerfile  flashbox-build-server.Dockerfile.dockerignore  flashbox-project-server.Dockerfile  flashbox-project-server.Dockerfile.dockerignore  healthcheck.js  node-service-dockerfile.test.js  node-service.Dockerfile
docs/: ai-project-source-retrieval.md  architecture-documentation.md  audit-security-legal-views.md  codex-reminder-procedure.md  codex-staging-deployment.md  copy-protection-requirement.md  customer-data-backup-and-recovery.md  customer-data-consent.md  customer-journey.md  development-path-architecture-first.md  development-process.md  documentation-strategy.md  documentation-topics.md  domains.md  fast-embedded-firmware-feedback.md  firmware-build-targets-and-releases.md  firmware-project-structure.md  flashbox-firmware-requirements.md  flashbox-inventory-data-model.md  flashbox-system-integration.md  flashbox-work-packages.md  guided-lesson-preview-migration.md  help-access-tiers.md  incremental-build-strategy.md  iot-telemetry-infrastructure.md  learning-project-catalog-classification.md  metamodel-learning-platform-review.md  metamodel-learning-platform.md  metamodel.md  model-based-tamagotchi-vision.md  open-questions.md  operator-surfaces.md  ota-build-flash-sequence.md  persistence-and-asset-storage.md  personas-roles-permissions.md  principles.md  process-start-overview.md  product-and-license-strategy.md  products.md  project-ai-pet-esp32.md  (+20 more)
model/: relations.yaml  traceability.yaml
runtimes/: README.md
tools/: GerNetiX-Check-und-Start.command  check-and-wake-launcher.test.js  check-and-wake-processes.js  check-and-wake-processes.test.js  connect-staging.js  connect-staging.test.js  generate-device-pki.js  (+9 more)
(+742 files in other folders)
