idf_component_register(
  SRCS
    main.cpp
    functions/factory_provisioning.cpp
    functions/feedback.cpp
    functions/handleNetwork.cpp
    functions/initPins.cpp
    functions/initSerial.cpp
    functions/initWifi.cpp
    functions/mqtt_ota.cpp
    functions/ota_update.cpp
    functions/startCaptiveDnsServer.cpp
    functions/publishStatus.cpp
    functions/provisioning_config.cpp
    functions/readSensors.cpp
    functions/runDiagnostics.cpp
    functions/startDeviceWebServer.cpp
    functions/startRuntimeTasks.cpp
    functions/updateActuators.cpp
    hooks/onProjectInit.cpp
    hooks/onProjectTick.cpp
    user/user_app.cpp
  INCLUDE_DIRS ../include
  REQUIRES
    app_update
    esp_driver_gpio
    esp_event
    esp_http_server
    esp_https_ota
    esp_netif
    esp_timer
    esp_wifi
    freertos
    log
    lwip
    mbedtls
    mqtt
    nvs_flash
)
